...
    val min: Int = 0,
    val max: Int = Int.MAX_VALUE
)

data class ViewPreCreationProfile(
    val id: String? = null,
    val text: PreCreationModel = PreCreationModel(20),
    val image: PreCreationModel = PreCreationModel(20),
    val gifImage: PreCreationModel = PreCreationModel(3),
    val overlapContainer: PreCreationModel = PreCreationModel(8),
    val linearContainer: PreCreationModel = PreCreationModel(12),
    val wrapContainer: PreCreationModel = PreCreationModel(4),
    val grid: PreCreationModel = PreCreationModel(4),
    val gallery: PreCreationModel = PreCreationModel(6),
    val pager: PreCreationModel = PreCreationModel(2),
    val tab: PreCreationModel = PreCreationModel(2),
    val state: PreCreationModel = PreCreationModel(4),
    val custom: PreCreationModel = PreCreationModel(2),
    val indicator: PreCreationModel = PreCreationModel(2),
    val slider: PreCreationModel = PreCreationModel(2),
    val input: PreCreationModel = PreCreationModel(2),
    val select: PreCreationModel = PreCreationModel(2),
    val video: PreCreationModel = PreCreationModel(2),
    val switch: PreCreationModel = PreCreationModel(2),
) {
    companion object {
...
